--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcc 'B'
 - !lcsh 'Cosmology -- Early works to 1800'
 - !lcc 'PA'
+- GITenberg
 title: Τίμαιος, Τόμος Β
 url: http://www.gutenberg.org/ebooks/36049
